added navbar and about section type

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,8 +1,144 @@
+<style>
+  .type1 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f0bcba;
+  }
+  .type2 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f0bcba;
+  }
+  .type3 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f75082;
+  }
+  .type4 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f06292;
+  }
+  .type5 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #eeaea3;
+  }
+  .type6 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #eca16a;
+  }
+  .type7 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #b6a5c6;
+  }
+  .type8 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f1cf74;
+  }
+  .type9 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #d69b8f;
+  }
+  .type10 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #a17bd2;
+  }
+  .type11 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #9066b6;
+  }
+  .type12 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f24e1e;
+  }
+  .type13 {
+    font-family: Inter;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 47px;
+    letter-spacing: -0.1em;
+    text-align: left;
+    color: #f4511e;
+  }
+</style>
 <section>
-    <div class="scroll-animation">
-        <p>
-            About Section
-        </p>
-    </div>
-   
+  <div class="scroll-animation flex">
+    <p class="p-5">
+      <span class="type1">hello</span>
+      <span class="type2">, I am</span>
+      <span class="type3"> Saba,</span>
+      <span class="type4"> an </span>
+      <span class="type5"> industrial d</span>
+      <span class="type6">esign </span>
+      <br />
+      <span class="type2">student from Turkey </span>
+      <span class="type7">with a </span>
+      <span class="type8">pas</span>
+      <span class="type6">sion</span>
+      <br />
+      <span class="type9">for </span>
+      <span class="type10">creating </span>
+      <span class="type11">innov</span>
+      <span class="type7">ative and </span>
+      <br />
+      <span class="type12">thoughtful </span>
+      <span class="type13">designs.</span>
+    </p>
+  </div>
 </section>
