--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,55 @@
-<nav class="p-2">
-    <div class="flex flex-row m-3 p-5 rounded-2xl navbar-back">
-        Navbar
+---
+const navLinks = [
+    {
+        name: "About Me",
+        link: "/about"
+    },
+    {
+        name: "Projects",
+        link: "/projects"
+    },
+    {
+        name: "Artwork",
+        link: "/gallery"
+    },
+    {
+        name: "Contact",
+        link: "/contact"
+    },
+
+]
+---
+<nav class="p-2 z-30">
+    <div class="flex justify-between flex-row m-3 p-5 rounded-2xl navbar-back">
+        <div class="-p1">
+            Logo
+        </div>
+        <div>
+            <div class="hidden md:block">
+                {
+                    navLinks.map((navLink)=> {
+                        return (
+                            <a class="p-1 mx-2 rounded text-slate-700 hover:text-slate-900 hover:underline underline-offset-4 decoration-slate-500 transition duration-300" href={navLink.link}>{navLink.name}</a>
+                        )
+                    }
+    
+                    )
+                }
+                <button class="rounded-lg ml-3 p-2 bg-black text-white hover:bg-slate-800 transition duration-150">
+                    <span class="m-1">
+                        Download CV
+                    </span>
+                    
+                    <span class="m-1">
+                        <svg class="w-[1.25rem] inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M4 19H20V12H22V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V12H4V19ZM14 9H19L12 16L5 9H10V3H14V9Z"></path></svg>
+                    </span>
+                </button>
+                
+            </div>
+            <div class="block md:hidden cursor-pointer rounded p-2 transition duration-300 hover:bg-slate-300">
+                <svg class="w-[1.25rem] inline " xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
+            </div>
+        </div>
+        
     </div>
 </nav>
