--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,10 +2,9 @@
 import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 const posts = await getCollection("posts");
-console.log(posts)
 
 ---
-<Layout title="Blog">
+<Layout title="Blog" description="Saba Sen Blog">
     <div class="flex justify-center p-5">
         <span>Post: </span>
         {
