--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Scroll from '../scripts/scroll.astro';
 import '../styles/main.scss';
 ---
 
-<Layout title="Saba" >
+<Layout title="Saba" description="Saba Sen Portfolio Website"  >
   <Hero />
   <About />
 
