--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,11 +4,11 @@ import Navbar from "./Navbar.astro";
 
 <section id="hero" class="hero">
   <Navbar />
-  <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
-      <div class="mr-auto place-self-center lg:col-span-7 scroll-animation">
-          <img src="/img/hero1.png" />
+  <div class="grid grid-cols-1 md:grid-cols-2 h-[70vh]  p-2 md:p-0">
+      <div class="flex scroll-animation items-center justify-center">
+          <img src="/img/hero1.png" class="w-100 p-1" />
       </div>
-      <div class="scroll-animation delay-300 place-self-center lg:mt-0 lg:col-span-5 lg:flex">
+      <div class="flex scroll-animation delay-300 items-center justify-center -mt-24 md:mt-0">
           <img src="/img/hero2.png" alt="mockup">
       </div>                
   </div>
