--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,27 @@
 ---
 interface Props {
 	title: string;
+	description: string;
+	canonicalURL?: string;
 }
 
-const { title } = Astro.props;
+const { title, description, canonicalURL } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta property="og:title" content={title} />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content={description} />
+		<meta property="og:url" content={canonicalURL} />
+		<meta property="og:locale" content="en_US" />
+    	<meta property="og:site_name" content="Centro di Ricerca Interdisciplinare sulla Voce (CRIV)" />
 		<title>{title}</title>
 		  <!-- google font -->
 		  <link rel="preconnect" href="https://fonts.googleapis.com">
