--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,60 +3,62 @@
   //border: 1px solid #BB2649;
   //background-color: #BB2649;
   width: 200px;
-  height:200px;
-  margin:2rem;
+  height: 200px;
+  margin: 2rem;
   background: rgba(255, 255, 255, 0.2);
 
-//box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-//border: 1px solid rgba(255, 255, 255, 0.3);
-box-shadow:  20px 20px 60px #bebebe,
-             -20px -20px 60px #ffffff;
+  //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  //border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 20px 20px 60px #bebebe,
+    -20px -20px 60px #ffffff;
 }
+
 // body {
 //   //background: rgb(238,174,202);
 //   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-  
+
 // }
 
 .navbar-back {
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
--webkit-backdrop-filter: blur(10px);
-//border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(10px);
+  //border: 1px solid rgba(255, 255, 255, 0.3);
 
 }
 
 .scroll-animation {
-  transform: translateY(200px); /* Element starts 200px lower */
-  opacity: 0; /* Initially invisible */
-  transition: all 1s cubic-bezier(.17,.67,.56,.73);
+  transform: translateY(200px);
+  /* Element starts 200px lower */
+  opacity: 0;
+  /* Initially invisible */
+  transition: all 1s cubic-bezier(.17, .67, .56, .73);
 }
 
 /* Delay class to delay the animation */
 .delay-300 {
-  transition-delay: 300ms; /* Delay of 300ms */
+  transition-delay: 300ms;
+  /* Delay of 300ms */
 }
 
-.scroll-animated { 
-  transform: translateY(0); /* Moves to its normal position */
-  opacity: 1; 
+.scroll-animated {
+  transform: translateY(0);
+  /* Moves to its normal position */
+  opacity: 1;
 }
 
 
 section {
   height: 100vh;
-  width:100%;
+  width: 100%;
 }
 
 .hero {
-  // background: url('/img/back.svg');
-  // background-repeat: no-repeat; /* Do not repeat the image */
-  // background-size: cover; /* Resize the background image to cover the entire container */
-  background: rgb(238,174,202);
-background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(217,202,180,1) 47%, rgba(148,187,233,1) 100%);
+   background: url('/img/back.svg');
+   background-repeat: no-repeat; /* Do not repeat the image */
+   background-size: cover; /* Resize the background image to cover the entire container */
+  //background: rgb(244,81,30);
+  //background: radial-gradient(circle, rgba(244,81,30,0.241421568627451) 0%, rgba(240,98,146,0.37307422969187676) 15%, rgba(241,207,116,0.6980042016806722) 47%, rgba(238,174,163,0.37307422969187676) 78%, rgba(182,165,198,0.3842787114845938) 100%);
 }
-
-
-
