--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,10 +19,10 @@ const navLinks = [
 
 ]
 ---
-<nav class="p-2 z-30">
-    <div class="flex justify-between flex-row m-3 p-5 rounded-2xl navbar-back">
-        <div class="-p1">
-            Logo
+<nav class="p-1 z-30 hidden md:block">
+    <div class="flex justify-between flex-row m-3 p-3 rounded-2xl navbar-back">
+        <div class="p-1">
+            Saba Sen
         </div>
         <div>
             <div class="hidden md:block">
