--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,19 @@ import About from '../components/About.astro';
 import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Scroll from '../scripts/scroll.astro';
+import '../styles/scroll-animations.scss';
 import '../styles/main.scss';
 ---
 
 <Layout title="Saba" description="Saba Sen Portfolio Website"  >
-  <Hero />
-  <About />
-
-<Scroll />
+ 
+    <Hero />
+    <About />
+ 
+  
+  
+  <Scroll />
+ 
 </Layout>
    
    
