added experience headlines and about buttons

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import Navbar from "./Navbar.astro";
 ---
 
-<section id="hero" class="hero">
+<section id="hero" class="hero relative">
   <Navbar />
   <div class="grid grid-cols-1 md:grid-cols-2 h-[70vh]  p-2 md:p-0">
       <div class="flex scroll-animation scroll-animation-default items-center justify-center">
