--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import Layout from '../layouts/Layout.astro';
 import Scroll from '../scripts/scroll.astro';
 import '../styles/scroll-animations.scss';
 import '../styles/main.scss';
+import Experience from '../components/Experience.astro';
 ---
 
 <Layout title="Saba" description="Saba Sen Portfolio Website"  >
  
     <Hero />
     <About />
+    <Experience />
  <Scroll />
 </Layout>
    
