--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,48 +1,36 @@
 .card1 {
   border-radius: 25% 75% 25% 25% / 75% 47% 53% 25%;
-  //border: 1px solid #BB2649;
-  //background-color: #BB2649;
-  width: 200px;
+ width: 200px;
   height: 200px;
   margin: 2rem;
   background: rgba(255, 255, 255, 0.2);
 
-  //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  //border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 20px 20px 60px #bebebe,
+   box-shadow: 20px 20px 60px #bebebe,
     -20px -20px 60px #ffffff;
 }
 
-// body {
-//   //background: rgb(238,174,202);
-//   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 
-// }
 
 .navbar-back {
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  //border: 1px solid rgba(255, 255, 255, 0.3);
 
 }
 
 
 
-section {
+.aboutSection {
   height: 100vh;
   width: 100%;
 }
 
 .hero {
-  //  background: url('/img/back.svg');
-  //  background-repeat: no-repeat; /* Do not repeat the image */
-  //  background-size: cover; /* Resize the background image to cover the entire container */
-  //background: rgb(244,81,30);
-  //background: radial-gradient(circle, rgba(244,81,30,0.241421568627451) 0%, rgba(240,98,146,0.37307422969187676) 15%, rgba(241,207,116,0.6980042016806722) 47%, rgba(238,174,163,0.37307422969187676) 78%, rgba(182,165,198,0.3842787114845938) 100%);
-  background: radial-gradient(
+  height: 100vh;
+  width: 100%;
+   background: radial-gradient(
     farthest-side at bottom left,
     rgba(255, 0, 255, 0.5), 
     transparent
