--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,6 @@
 ---
+import { Logo } from "./AboutMotion/Logo"
+
 const navLinks = [
     {
         name: "About Me",
@@ -22,7 +24,7 @@ const navLinks = [
 <nav class="p-1 z-30 hidden md:block">
     <div class="flex justify-between flex-row m-3 p-3 rounded-2xl navbar-back">
         <div class="p-1">
-            Saba Sen
+            <Logo client:load/>
         </div>
         <div>
             <div class="hidden md:block">
