--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -124,7 +124,7 @@ import { LeftBottom } from "./AboutMotion/LeftBottom";
     color: #f4511e;
   }
 </style>
-<section class="flex flex-col relative aboutSection">
+<section class="flex flex-col relative h-[200vh] md:h-screen">
     <div class="absolute md:top-4 md:right-4 top-2 right-0">
       <TopRight client:load />
     </div>
